--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "homepage": "",
   "dependencies": {
-    "bcrypt-as-promised": "^1.1.0",
+    "bcrypt": "^0.8.7",
     "body-parser": "^1.15.2",
     "boom": "^3.2.2",
     "cookie-parser": "^1.4.3",
