--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "eslint  --ignore-pattern public/js/vendor",
     "nf": "nf start",
     "start": "nodemon server.js",
-    "test": "mocha"
+    "test": "mocha",
+    "heroku-postbuild": "knex migrate:latest",
   },
   "repository": {
     "type": "git",
